--- a/index.html
+++ b/index.html
@@ -50,6 +50,8 @@
     <meta name="application-name" content="Nivasi.space" />
     <meta name="apple-mobile-web-app-title" content="Nivasi" />
     <meta name="apple-mobile-web-app-capable" content="yes" />
+    <meta name="mobile-web-app-capable" content="yes" />
+    <meta http-equiv="Cross-Origin-Opener-Policy" content="same-origin-allow-popups" />
     <meta name="apple-mobile-web-app-status-bar-style" content="default" />
     <meta name="format-detection" content="telephone=no" />
     <meta name="msapplication-TileColor" content="#ff6b35" />
