--- a/index.html
+++ b/index.html
@@ -2,20 +2,11 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <!-- Favicon - Multiple formats for better browser compatibility -->
+    <!-- Favicon - Prefer PNG for broad support; keep SVG as additional icon -->
+    <link rel="icon" href="/icon-192.png" sizes="192x192" type="image/png" />
     <link rel="icon" type="image/svg+xml" href="/logo.svg" />
-    <link rel="icon" type="image/png" sizes="32x32" href="/logo.svg" />
-    <link rel="icon" type="image/png" sizes="16x16" href="/logo.svg" />
-    <link rel="apple-touch-icon" sizes="180x180" href="/logo.svg" />
-    <link rel="apple-touch-icon" sizes="152x152" href="/logo.svg" />
-    <link rel="apple-touch-icon" sizes="144x144" href="/logo.svg" />
-    <link rel="apple-touch-icon" sizes="120x120" href="/logo.svg" />
-    <link rel="apple-touch-icon" sizes="114x114" href="/logo.svg" />
-    <link rel="apple-touch-icon" sizes="76x76" href="/logo.svg" />
-    <link rel="apple-touch-icon" sizes="72x72" href="/logo.svg" />
-    <link rel="apple-touch-icon" sizes="60x60" href="/logo.svg" />
-    <link rel="apple-touch-icon" sizes="57x57" href="/logo.svg" />
-    <link rel="shortcut icon" href="/logo.svg" />
+    <link rel="apple-touch-icon" sizes="180x180" href="/icon-192.png" />
+    <link rel="shortcut icon" href="/icon-192.png" type="image/png" />
     
     <!-- Preload critical images for LCP optimization -->
     <link rel="preload" as="image" href="/Ayan%20Mulla/mulla%200_converted_converted.avif" fetchpriority="high" />
