btn fix of gen and loc

--- a/index.html
+++ b/index.html
@@ -2,11 +2,10 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <!-- Favicon - Prefer PNG for broad support; keep SVG as additional icon -->
-    <link rel="icon" href="/icon-192.png" sizes="192x192" type="image/png" />
-    <link rel="icon" type="image/svg+xml" href="/logo.svg" />
-    <link rel="apple-touch-icon" sizes="180x180" href="/icon-192.png" />
-    <link rel="shortcut icon" href="/icon-192.png" type="image/png" />
+    <!-- Favicon - Use SVG with cache busting for immediate update -->
+    <link rel="icon" type="image/svg+xml" href="/logo.svg?v=3" />
+    <link rel="shortcut icon" href="/logo.svg?v=3" type="image/svg+xml" />
+    <link rel="apple-touch-icon" href="/logo.svg?v=3" />
     
     <!-- Preload critical images for LCP optimization -->
     <link rel="preload" as="image" href="/Ayan%20Mulla/mulla%200_converted_converted.avif" fetchpriority="high" />
